Fix Calendar for phones and tablets, only shows agenda on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 }
 
 .calendar-frame{
-  display: flex;
   margin-top: 30px;
 }
 
